--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ International Conference on Computer Vision (<strong>ICCV</strong>), 2017
 </div>
 
 <hr>
-<div id="clustrmaps-widget"></div><script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=2qC7&d=moSsaMzezP5mVgywsQ3_t_xX8z9yNx7f1iPUVR5tuQE"></script>
+<div id="clustrmaps-widget"></div><script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=mEeGHmaub5GXeeTxKsShipAjJG4IG43WXN86qcXppc4&cl=ffffff&w=a"></script>
 
 </body>
 </html>
