--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ International Conference on Computer Vision (<strong>ICCV</strong>), 2017
 </div>
 
 <hr>
-<div id="clustrmaps-widget"></div><script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=mEeGHmaub5GXeeTxKsShipAjJG4IG43WXN86qcXppc4&cl=ffffff&w=a"></script>
+<div id="clustrmaps-widget"></div><script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=265499&w=400&t=n&d=mEeGHmaub5GXeeTxKsShipAjJG4IG43WXN86qcXppc4&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
 
 </body>
 </html>
