--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ My research interests include machine learning and computer vision.
   <h2>News</h2>
   <div class="paper">
     <ul>
-
+    Our paper "Mix-and-Match Tuning for Self-Supervised Semantic Segmentation" was accepted in AAAI-18.
     </ul>
   </div>
 </div>
