--- a/index.html
+++ b/index.html
@@ -204,15 +204,17 @@ My research interests include machine learning and computer vision.
 <h2 id="confpapers">Publications</h2>
 
 
-<div class="paper" id="ICCV2017"><img class="paper" src="xx.png" title="xxxx" />
-<div> <strong>xxxx</strong><br />
+<div> <strong>2018</strong><br />
 
-<!-- <div class="paper" id="ICCV2017"><img class="paper" src="papers/ICCV2017.png" title="Single Shot Text Detector with Regional Attention" />
-<div> <strong>Single Shot Text Detector with Regional Attention</strong><br />
-P. He, W. Huang, <strong>T. He</strong>, Q. Zhu, Y. Qiao, X. Li  <br />
-International Conference on Computer Vision (<strong>ICCV</strong>), 2017
-<a href='https://arxiv.org/pdf/1709.00138.pdf'>[PDF]</a>
-<a href='http://128.227.246.42:5555/'>[demo]</a> -->
+<div class="paper" id="AAAI2018"><img class="paper" src="images/aaai18-mm.png" title="aaai18-mm" />
+<div> <strong>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</strong><br />
+<br>
+<striong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy.
+AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018<br />
+<br>
+<a href='https://arxiv.org/abs/1712.00661'>[PDF]</a>
+<a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
+<a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
 
 </div>
 <div class="spanner"></div>
@@ -233,12 +235,13 @@ International Conference on Computer Vision (<strong>ICCV</strong>), 2017
 </div>
 </div>
 
-
+<!---
 <div style="clear: both;">
 <div class="section">
 <h2 id="confpapers">Contests</h2>
 <div class="paper">
 <ul>
+-->
 
 </ul>
 <div class="spanner"></div>
