--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ div.paper pre {
 
 <div style="clear: both;">
 <div class="section">
-<h2>About Me (<a href='CV_xiaohangzhan.pdf'>CV</a>) (<a href='https://scholar.google.com/'>Google scholar</a>)</h2>
+<h2>About Me (<a href='CV_xiaohangzhan.pdf'>CV</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
 <div class="paper">
 I'm currently a Ph.D. candidate in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change LOY</a>.
 Before that, I received my B.E. degree in the <a href='http://www.dae.tsinghua.edu.cn/'>Department of Automative Engineering</a> in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
