--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ My research interests include machine learning and computer vision.
 <div> <strong>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</strong><br />
 <br>
 <striong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy.
-AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018<br />
+AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018 (<strong>Spotlight</strong>)<br />
 <br>
 <a href='https://arxiv.org/abs/1712.00661'>[PDF]</a>
 <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
