--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@ AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018 (<stron
 <div class="section">
 <h2 id="confpapers">Professional activities</h2>
 <div class="paper">
+<li>Reviewer of IJCV.</li>
 <ul>
 <p><font size="5"></font></p>
 </ul>
@@ -248,6 +249,19 @@ AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018 (<stron
 </div>
 </div>
 </div>
+
+<div style="clear: both;">
+<div class="section"><h2>Talks</h2>
+<div class="paper">
+<li>2017 @ JD <a href=pdf/talk-jd-2017.pdf>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></li>
+
+</div>
+<div class="spanner"></div>
+</div>
+
+</div>
+</div>
+
 
 <div style="clear: both;">
 <div class="section"><h2>Awards</h2>
