--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ div.paper pre {
 <div style="margin: 0px auto; width: 100%;">
 <img title="XiaohangZhan" style="float: left; padding-left: .01em; height: 140px;" src="XiaohangZhan.jpg" />
 <div style="padding-left: 12em; vertical-align: top; height: 120px;"><span style="line-height: 150%; font-size: 20pt;">Xiaohang Zhan (詹晓航)</span><br />
+<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-2136-7592" href="https://orcid.org/0000-0003-2136-7592" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0003-2136-7592</a></div>
 <span><strong>Ph.D. candidate</strong></span><br />
 <span><a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory</a></span><br />
 <span>Department of Information Engineering, The Chinese University of Hong Kong</span><br />
@@ -193,7 +194,7 @@ My research interests include machine learning and computer vision.
   <h2>News</h2>
   <div class="paper">
     <ul>
-    Our paper "Mix-and-Match Tuning for Self-Supervised Semantic Segmentation" was accepted in AAAI-18.
+    Our paper "Consensus-Driven Propagation in Massive Unlabeled Data for Face Recognition" was accepted in ECCV-18.
     </ul>
   </div>
 </div>
