--- a/index.html
+++ b/index.html
@@ -216,14 +216,27 @@ AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018 (<stron
 <a href='https://arxiv.org/abs/1712.00661'>[PDF]</a>
 <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
 <a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
-
 </div>
+
+<div class="spanner"></div>
+</div>
+
+<div class="paper" id="ECCV2018"><img class="paper" src="images/eccv18-cdp.png" title="eccv18-cdp" />
+<div> <strong>Consensus-Driven Propagation in Massive Unlabeled Data for Face Recognition</strong><br />
+<br>
+<striong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy.
+European Conference on Computer Vision (<strong>ECCV</strong>), 2018<br />
+<br>
+<a href=''>[PDF]</a>
+<a href='http://mmlab.ie.cuhk.edu.hk/projects/CDP/'>[Project Page]</a>
+<a href=''>[Code]</a>
+</div>
+
 <div class="spanner"></div>
 </div>
 
 </div>
 </div>
-
 
 <div style="clear: both;">
 <div class="section">
