--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@ AAAI Conference on Artificial Intelligence (<strong>AAAI</strong>), 2018 (<stron
 <striong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy.
 European Conference on Computer Vision (<strong>ECCV</strong>), 2018<br />
 <br>
-<a href=''>[PDF]</a>
+<a href='https://arxiv.org/abs/1809.01407'>[PDF]</a>
 <a href='http://mmlab.ie.cuhk.edu.hk/projects/CDP/'>[Project Page]</a>
-<a href=''>[Code]</a>
+<a href='https://github.com/XiaohangZhan/cdp/'>[Code]</a>
 </div>
 
 <div class="spanner"></div>
