update reviewer: CVPR

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ European Conference on Computer Vision (<strong>ECCV</strong>), 2018<br />
 <div class="section">
 <h2 id="confpapers">Professional activities</h2>
 <div class="paper">
-<li>Reviewer of IJCV.</li>
+<li>Reviewer of IJCV, CVPR.</li>
 <ul>
 <p><font size="5"></font></p>
 </ul>
