--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <span><strong>Ph.D. candidate</strong></span><br />
                 <span><a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory</a></span><br />
                 <span>Department of Information Engineering, The Chinese University of Hong Kong</span><br />
-                <span><a href="mailto:xiaohangzhan@outlook.com">email</a></span><br />
+                <span><a href="mailto:zx017@ie.cuhk.edu.hk">email</a></span><br />
             </div>
         </div>
     </div>
