--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <h2>News</h2>
             <div class="paper">
                 <ul>
-                    Our paper "Consensus-Driven Propagation in Massive Unlabeled Data for Face Recognition" was accepted in ECCV-18.
+                    Three papers are accepted to CVPR 2019.
                 </ul>
             </div>
         </div>
@@ -250,20 +250,60 @@
     <div style="clear: both;">
         <div class="section">
             <h2 id="confpapers">Publications</h2>
+
+            <div> <strong>2019</strong><br />
+                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-longtail.png" title="cvpr19-longtail" />
+                    <div> <strong>Large-scale Long-Tailed Recognition in an Open World.</strong><br />
+                        <br>
+                        Ziwei Liu, Zhongqi Miao, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella Yu. 
+                        In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
+                        <br>
+                        [PDF]
+                        [Project Page]
+                        [Code]
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-gcn.png" title="cvpr19-gcn" />
+                    <div> <strong>Learning to Cluster Faces on an Affinity Graph</strong><br />
+                        <br>
+                        Lei Yang, <strong>Xiaohang Zhan</strong>, Dapeng Chen, Junjie Yan, Chen Change Loy, Dahua Lin.
+                        In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
+                        <br>
+                        [PDF]
+                        [Project Page]
+                        [Code]
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-cmp.png" title="cvpr19-cmp" />
+                    <div> <strong>Self-Supervised Learning via Conditional Motion Propagation</strong><br />
+                        <br>
+                        <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy.
+                        In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 <br />
+                        <br>
+                        [PDF]
+                        [Project Page]
+                        [Code]
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+            </div>
+
+
             <div> <strong>2018</strong><br />
-
-
                 <div class="paper" id="ECCV2018"><img class="paper" src="images/eccv18-cdp.png" title="eccv18-cdp" />
                     <div> <strong>Consensus-Driven Propagation in Massive Unlabeled Data for Face Recognition</strong><br />
                         <br>
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy.
-                        European Conference on Computer Vision (ECCV), 2018<br />
+                        In Proceedings of European Conference on Computer Vision (ECCV), 2018<br />
                         <br>
                         <a href='https://arxiv.org/abs/1809.01407'>[PDF]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CDP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/cdp/'>[Code]</a>
                     </div>
-
                     <div class="spanner"></div>
                 </div>
 
@@ -271,17 +311,14 @@
                     <div> <strong>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</strong><br />
                         <br>
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy.
-                        AAAI Conference on Artificial Intelligence (AAAI), 2018 (<strong>Spotlight</strong>)<br />
+                        In AAAI Conference on Artificial Intelligence (AAAI), 2018 (<strong>Spotlight</strong>)<br />
                         <br>
                         <a href='https://arxiv.org/abs/1712.00661'>[PDF]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
                     </div>
-
                     <div class="spanner"></div>
                 </div>
-
-
             </div>
         </div>
     </div>
@@ -290,7 +327,7 @@
         <div class="section">
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
-                <li>Reviewer of IJCV, CVPR.</li>
+                <li>Reviewer of IJCV, CVPR, BMVC.</li>
                 <ul>
                     <p><font size="5"></font></p>
                 </ul>
