--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
                         <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy.
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 <br />
                         <br>
-                        [PDF]
-                        [Project Page]
-                        [Code]
+                        <a href='https://arxiv.org/abs/1903.11412'>[PDF]</a>
+                        <a href='http://mmlab.ie.cuhk.edu.hk/projects/CMP/'>[Project Page]</a>
+                        <a href='https://github.com/XiaohangZhan/conditional_motion_propagation/'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
