--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         Ziwei Liu, Zhongqi Miao, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella Yu. 
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
                         <br>
-                        [PDF]
+                        <a href='https://arxiv.org/abs/1904.05160'>[PDF]</a>
                         [Project Page]
                         [Code]
                     </div>
