--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <div class="section">
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
-                <li>Reviewer of IJCV, CVPR, BMVC.</li>
+                <li>Reviewer of IJCV, CVPR, ICCV, BMVC.</li>
                 <ul>
                     <p><font size="5"></font></p>
                 </ul>
