--- a/index.html
+++ b/index.html
@@ -252,15 +252,29 @@
             <h2 id="confpapers">Publications</h2>
 
             <div> <strong>2019</strong><br />
-                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-longtail.png" title="cvpr19-longtail" />
-                    <div> <strong>Large-scale Long-Tailed Recognition in an Open World.</strong><br />
+
+                 <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-sw.png" title="arxiv-sw" />
+                    <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
                         <br>
-                        Ziwei Liu, Zhongqi Miao, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella Yu. 
+                        Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo.
+                        In ArXiv<br />
+                        <br>
+                        <a href='https://arxiv.org/abs/1904.09739'>[PDF]</a>
+                        [Project Page]
+                        [Code]
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-longtail.png" title="cvpr19-longtail" />
+                    <div> <strong>Large-scale Long-Tailed Recognition in an Open World</strong><br />
+                        <br>
+                        Ziwei Liu*, Zhongqi Miao*, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella X. Yu. 
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
                         <br>
                         <a href='https://arxiv.org/abs/1904.05160'>[PDF]</a>
-                        [Project Page]
-                        [Code]
+                        <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
+                        <a href='https://github.com/zhmiao/OpenLongTailRecognition-OLTR'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -272,8 +286,8 @@
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
                         <br>
                         <a href='https://arxiv.org/abs/1904.02749'>[PDF]</a>
-                        [Project Page]
-                        [Code]
+                        <a href='http://yanglei.me/project/ltc/'>[Project Page]</a>
+                        <a href='https://github.com/yl-1993/learn-to-cluster'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -286,7 +300,7 @@
                         <br>
                         <a href='https://arxiv.org/abs/1903.11412'>[PDF]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CMP/'>[Project Page]</a>
-                        <a href='https://github.com/XiaohangZhan/conditional_motion_propagation/'>[Code]</a>
+                        <a href='https://github.com/XiaohangZhan/conditional-motion-propagation/'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
