--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
                         Lei Yang, <strong>Xiaohang Zhan</strong>, Dapeng Chen, Junjie Yan, Chen Change Loy, Dahua Lin.
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
                         <br>
-                        <a href='https://arxiv.org/abs/1904.02749'>[PDF]</a>
+                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_cluster.pdf'>[PDF]</a>
+                        <a href='https://arxiv.org/abs/1904.02749'>[Technical Report]</a>
                         [Project Page]
                         [Code]
                     </div>
@@ -284,7 +285,8 @@
                         <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy.
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 <br />
                         <br>
-                        <a href='https://arxiv.org/abs/1903.11412'>[PDF]</a>
+                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_self.pdf'>[PDF]</a>
+                        <a href='https://arxiv.org/abs/1903.11412'>[Technical Report]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CMP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/conditional_motion_propagation/'>[Code]</a>
                     </div>
@@ -300,7 +302,8 @@
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy.
                         In Proceedings of European Conference on Computer Vision (ECCV), 2018<br />
                         <br>
-                        <a href='https://arxiv.org/abs/1809.01407'>[PDF]</a>
+                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/eccv_2018_cdp.pdf'>[PDF]</a>
+                        <a href='https://arxiv.org/abs/1809.01407'>[Technical Report]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CDP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/cdp/'>[Code]</a>
                     </div>
@@ -313,7 +316,8 @@
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy.
                         In AAAI Conference on Artificial Intelligence (AAAI), 2018 (<strong>Spotlight</strong>)<br />
                         <br>
-                        <a href='https://arxiv.org/abs/1712.00661'>[PDF]</a>
+                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
+                        <a href='https://arxiv.org/abs/1712.00661'>[Technical Report]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
                     </div>
