--- a/index.html
+++ b/index.html
@@ -372,6 +372,8 @@
             <div class="paper">
                 <li>2017 @ JD <a href=pdf/talk-jd-2017.pdf>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></li>
 
+                <li>2019 @ MMLAB <a href=pdf/mmlab.pptx>Self-supervised Learning via Conditional Motion Propagation</a></li>
+
             </div>
             <div class="spanner"></div>
         </div>
