--- a/index.html
+++ b/index.html
@@ -257,11 +257,9 @@
                     <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo.
-                        In ArXiv<br />
+                        In arXiv<br />
                         <br>
-                        <a href='https://arxiv.org/abs/1904.09739'>[Technical Report]</a>
-                        [Project Page]
-                        [Code]
+                        <a href='https://arxiv.org/abs/1904.09739'>[arXiv]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -272,7 +270,7 @@
                         Ziwei Liu*, Zhongqi Miao*, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella X. Yu. 
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
                         <br>
-                        <a href='https://arxiv.org/abs/1904.05160'>[Technical Report]</a>
+                        <a href='https://arxiv.org/abs/1904.05160'>[arXiv]</a>
                         <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
                         <a href='https://github.com/zhmiao/OpenLongTailRecognition-OLTR'>[Code]</a>
                     </div>
@@ -286,7 +284,7 @@
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_cluster.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1904.02749'>[Technical Report]</a>
+                        <a href='https://arxiv.org/abs/1904.02749'>[arXiv]</a>
                         <a href='http://yanglei.me/project/ltc/'>[Project Page]</a>
                         <a href='https://github.com/yl-1993/learn-to-cluster'>[Code]</a>
                     </div>
@@ -300,7 +298,7 @@
                         In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 <br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_self.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1903.11412'>[Technical Report]</a>
+                        <a href='https://arxiv.org/abs/1903.11412'>[arXiv]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CMP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/conditional-motion-propagation/'>[Code]</a>
                     </div>
@@ -317,7 +315,7 @@
                         In Proceedings of European Conference on Computer Vision (ECCV), 2018<br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/eccv_2018_cdp.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1809.01407'>[Technical Report]</a>
+                        <a href='https://arxiv.org/abs/1809.01407'>[arXiv]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CDP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/cdp/'>[Code]</a>
                     </div>
@@ -331,7 +329,7 @@
                         In AAAI Conference on Artificial Intelligence (AAAI), 2018 (<strong>Spotlight</strong>)<br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1712.00661'>[Technical Report]</a>
+                        <a href='https://arxiv.org/abs/1712.00661'>[arXiv]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
                     </div>
