--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
     ga('send', 'pageview');
 
 </script>
+
 <body>
     <div style="margin-bottom: 1em; border: 1px solid #ddd; background-color: #fff; padding: 1em; height: 140px;">
         <div style="margin: 0px auto; width: 100%;">
@@ -256,8 +257,8 @@
                  <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-sw.png" title="arxiv-sw" />
                     <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
                         <br>
-                        Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo.
-                        In arXiv<br />
+                        Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo
+                        <br />
                         <br>
                         <a href='https://arxiv.org/abs/1904.09739'>[arXiv]</a>
                     </div>
@@ -267,8 +268,9 @@
                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-longtail.png" title="cvpr19-longtail" />
                     <div> <strong>Large-scale Long-Tailed Recognition in an Open World</strong><br />
                         <br>
-                        Ziwei Liu*, Zhongqi Miao*, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella X. Yu. 
-                        In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
+                        Ziwei Liu*, Zhongqi Miao*, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella X. Yu
+                        <br>
+                        <em>Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/1904.05160'>[arXiv]</a>
                         <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
@@ -280,8 +282,9 @@
                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-gcn.png" title="cvpr19-gcn" />
                     <div> <strong>Learning to Cluster Faces on an Affinity Graph</strong><br />
                         <br>
-                        Lei Yang, <strong>Xiaohang Zhan</strong>, Dapeng Chen, Junjie Yan, Chen Change Loy, Dahua Lin.
-                        In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)<br />
+                        Lei Yang, <strong>Xiaohang Zhan</strong>, Dapeng Chen, Junjie Yan, Chen Change Loy, Dahua Lin
+                        <br>
+                        <em>Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_cluster.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.02749'>[arXiv]</a>
@@ -294,8 +297,9 @@
                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-cmp.png" title="cvpr19-cmp" />
                     <div> <strong>Self-Supervised Learning via Conditional Motion Propagation</strong><br />
                         <br>
-                        <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy.
-                        In Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 <br />
+                        <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy
+                        <br>
+                        <em>Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 </em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_self.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1903.11412'>[arXiv]</a>
@@ -311,8 +315,9 @@
                 <div class="paper" id="ECCV2018"><img class="paper" src="images/eccv18-cdp.png" title="eccv18-cdp" />
                     <div> <strong>Consensus-Driven Propagation in Massive Unlabeled Data for Face Recognition</strong><br />
                         <br>
-                        <strong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy.
-                        In Proceedings of European Conference on Computer Vision (ECCV), 2018<br />
+                        <strong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy
+                        <br>
+                        <em>Proceedings of European Conference on Computer Vision (ECCV), 2018</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/eccv_2018_cdp.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1809.01407'>[arXiv]</a>
@@ -325,8 +330,9 @@
                 <div class="paper" id="AAAI2018"><img class="paper" src="images/aaai18-mm.png" title="aaai18-mm" />
                     <div> <strong>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</strong><br />
                         <br>
-                        <strong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy.
-                        In AAAI Conference on Artificial Intelligence (AAAI), 2018 (<strong>Spotlight</strong>)<br />
+                        <strong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy
+                        <br>
+                        <em>AAAI Conference on Artificial Intelligence (AAAI), 2018 (<strong>Spotlight</strong>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1712.00661'>[arXiv]</a>
