--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
 
                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-gcn.png" title="cvpr19-gcn" />
-                    <div> <strong>Learning to Cluster Faces on an Affinity Graph</strong><br />
+                    <div style="padding-top: 2%"> <strong>Learning to Cluster Faces on an Affinity Graph</strong><br />
                         <br>
                         Lei Yang, <strong>Xiaohang Zhan</strong>, Dapeng Chen, Junjie Yan, Chen Change Loy, Dahua Lin
                         <br>
@@ -295,7 +295,7 @@
                 </div>
 
                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-cmp.png" title="cvpr19-cmp" />
-                    <div> <strong>Self-Supervised Learning via Conditional Motion Propagation</strong><br />
+                    <div style="padding-top: 3.5%"> <strong>Self-Supervised Learning via Conditional Motion Propagation</strong><br />
                         <br>
                         <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy
                         <br>
