--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
             <h2>News</h2>
             <div class="paper">
                 <ul>
-                    Three papers are accepted to CVPR 2019.
+                    [23/07/2019] One papers is accepted to ICCV 2019.<br>
+                    [24/02/2019] Three papers are accepted to CVPR 2019.
                 </ul>
             </div>
         </div>
@@ -258,7 +259,8 @@
                     <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo
-                        <br />
+                        <br>
+                        <em>Proceedings of IEEE International Conference on Computer Vision (ICCV), 2019</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/1904.09739'>[arXiv]</a>
                     </div>
