--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <div class="section">
             <h2>About Me (<a href='CV_xiaohangzhan.pdf'>CV</a>) (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
             <div class="paper">
-                I'm currently a Ph.D. student in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
+                I'm currently a Ph.D. student in <a href='http://mmlab.site/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.dae.tsinghua.edu.cn/'>Department of Automative Engineering</a> in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
                 My research interests include machine learning and computer vision.
