--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                         <br>
                         <em>Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)</em><br />
                         <br>
+                        <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Large-Scale_Long-Tailed_Recognition_in_an_Open_World_CVPR_2019_paper.pdf">[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.05160'>[arXiv]</a>
                         <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
                         <a href='https://github.com/zhmiao/OpenLongTailRecognition-OLTR'>[Code]</a>
