--- a/index.html
+++ b/index.html
@@ -255,7 +255,19 @@
 
             <div> <strong>2019</strong><br />
 
-                 <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-sw.png" title="arxiv-sw" />
+                <div class="paper" id="arxiv"><img class="paper" src="images/2019-ocda.png" title="2019-ocda" />
+                    <div> <strong>Compound Domain Adaptation in an Open World</strong><br />
+                        <br>
+                        Ziwei Liu*, Zhongqi Miao*, Xingang Pan, <strong>Xiaohang Zhan</strong>, Stella X. Yu, Dahua Lin, Boqing Gong
+                        <br>
+                        <em>ArXiv Preprints</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/1909.03403'>[arXiv]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                 <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19-sw.png" title="iccv19-sw" />
                     <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo
@@ -352,7 +364,7 @@
         <div class="section">
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
-                <li>Reviewer of IJCV, CVPR, ICCV, BMVC.</li>
+                <li>Reviewer of IJCV, CVPR, ICCV, BMVC, AAAI.</li>
                 <ul>
                     <p><font size="5"></font></p>
                 </ul>
