--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <h2>News</h2>
             <div class="paper">
                 <ul>
-                    [23/07/2019] One papers is accepted to ICCV 2019.<br>
+                    [23/07/2019] One paper is accepted to ICCV 2019.<br>
                     [24/02/2019] Three papers are accepted to CVPR 2019.
                 </ul>
             </div>
