--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             <h2>News</h2>
             <div class="paper">
                 <ul>
+                    [24/02/2020] Four papers were accepted to CVPR 2020.<br>
                     [01/11/2019] Our team won the 1st places in all 4 tracks on Facebook AI Self-Supervision Challenge.<br>
                     [23/07/2019] One paper was accepted to ICCV 2019.<br>
                     [24/02/2019] Three papers were accepted to CVPR 2019.
