--- a/index.html
+++ b/index.html
@@ -267,12 +267,25 @@
                     <div class="spanner"></div>
                 </div>
 
-                 <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19-sw.png" title="iccv19-sw" />
+                <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19w-codc.png" title="iccv19w-codc" />
+                    <div> <strong>Collaborative Online Deep Clustering for Unsupervised Representation Learning</strong><br />
+                        <br>
+                        <strong>Xiaohang Zhan</strong>, Jiahao Xie, Ziwei Liu, Yew Soon Ong, Chen Change Loy
+                        <br>
+                        <em>The <font color="orange">Champion</font> of <a href="https://sites.google.com/view/fb-ssl-challenge-iccv19/home">Facebook AI Self-Supervision Challenge</a> (all tracks), in ICCV <a href="https://sites.google.com/view/extremevision/">Extreme Vision Workshop</a>, 2019</em><br />
+                        <br>
+                        <a href="pdf/paper-codc-2019.pdf">[PDF]</a>
+                        <a href='pdf/talk-iccv19w-2019.pdf'>[Slides]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19-sw.png" title="iccv19-sw" />
                     <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo
                         <br>
-                        <em>Proceedings of IEEE International Conference on Computer Vision (ICCV), 2019</em><br />
+                        <em>IEEE International Conference on Computer Vision (ICCV), 2019</em><br />
                         <br>
                         <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Pan_Switchable_Whitening_for_Deep_Representation_Learning_ICCV_2019_paper.pdf">[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.09739'>[arXiv]</a>
@@ -286,7 +299,7 @@
                         <br>
                         Ziwei Liu*, Zhongqi Miao*, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella X. Yu
                         <br>
-                        <em>Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)</em><br />
+                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Large-Scale_Long-Tailed_Recognition_in_an_Open_World_CVPR_2019_paper.pdf">[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.05160'>[arXiv]</a>
@@ -301,7 +314,7 @@
                         <br>
                         Lei Yang, <strong>Xiaohang Zhan</strong>, Dapeng Chen, Junjie Yan, Chen Change Loy, Dahua Lin
                         <br>
-                        <em>Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<strong>Oral</strong>)</em><br />
+                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_cluster.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.02749'>[arXiv]</a>
@@ -316,7 +329,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy
                         <br>
-                        <em>Proceedings of IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 </em><br />
+                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 </em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_self.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1903.11412'>[arXiv]</a>
@@ -334,7 +347,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy
                         <br>
-                        <em>Proceedings of European Conference on Computer Vision (ECCV), 2018</em><br />
+                        <em>European Conference on Computer Vision (ECCV), 2018</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/eccv_2018_cdp.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1809.01407'>[arXiv]</a>
