--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                     <div class="spanner"></div>
                 </div>
 
+                <!--
                 <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19w-codc.png" title="iccv19w-codc" />
                     <div> <strong>Collaborative Online Deep Clustering for Unsupervised Representation Learning</strong><br />
                         <br>
@@ -278,7 +279,7 @@
                         <a href='pdf/talk-iccv19w-2019.pdf'>[Slides]</a>
                     </div>
                     <div class="spanner"></div>
-                </div>
+                </div> -->
 
                 <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19-sw.png" title="iccv19-sw" />
                     <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
