--- a/index.html
+++ b/index.html
@@ -253,21 +253,56 @@
         <div class="section">
             <h2 id="confpapers">Publications</h2>
 
-            <div> <strong>2019</strong><br />
+            <div> <strong>2020</strong><br />
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/2019-ocda.png" title="2019-ocda" />
-                    <div> <strong>Compound Domain Adaptation in an Open World</strong><br />
+                <div class="paper" id="CVPR20"><img class="paper" src="images/cvpr20-deocc.png" title="cvpr20-deocc" />
+                    <div> <strong>Self-Supervised Scene De-occlusion</strong><br />
                         <br>
-                        Ziwei Liu*, Zhongqi Miao*, Xingang Pan, <strong>Xiaohang Zhan</strong>, Stella X. Yu, Dahua Lin, Boqing Gong
+                        <strong>Xiaohang Zhan</strong>, Xingang Pan, Bo Dai, Ziwei Liu, Dahua Lin, Chen Change Loy
                         <br>
-                        <em>ArXiv Preprints</em><br />
+                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
-                        <a href='https://arxiv.org/abs/1909.03403'>[arXiv]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
 
-                <!--
+                <div class="paper" id="CVPR20"><img class="paper" src="images/cvpr20-odc.png" title="cvpr20-odc" />
+                    <div> <strong>Online Deep Clustering for Unsupervised Representation Learning</strong><br />
+                        <br>
+                        <strong>Xiaohang Zhan*</strong>, Jiahao Xie*, Ziwei Liu, Yew-Soon Ong, Chen Change Loy
+                        <br>
+                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
+                        <br>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="CVPR20"><img class="paper" src="images/cvpr20-clustering.png" title="cvpr20-clustering" />
+                    <div> <strong>Learning to Cluster Faces via Confidence and Connectivity Estimation</strong><br />
+                        <br>
+                        Lei Yang, <strong>Xiaohang Zhan*</strong>, Dapeng Chen*, Rui Zhao, Chen Change Loy, Dahua Lin
+                        <br>
+                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
+                        <br>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="CVPR20"><img class="paper" src="images/cvpr20-ocda.png" title="cvpr20-ocda" />
+                    <div> <strong>Compound Domain Adaptation in an Open World</strong><br />
+                        <br>
+                        Ziwei Liu*, Zhongqi Miao*, Xingang Pan, <strong>Xiaohang Zhan</strong>, Stella X. Yu, Dahua Lin, Boqing Gong
+                        <br>
+                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/1909.03403'>[arXiv]</a>
+                        <a href='https://liuziwei7.github.io/projects/CompoundDomain.html'>[Project Page]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div> <strong>2019</strong><br />
+
                 <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19w-codc.png" title="iccv19w-codc" />
                     <div> <strong>Collaborative Online Deep Clustering for Unsupervised Representation Learning</strong><br />
                         <br>
@@ -275,11 +310,9 @@
                         <br>
                         <em>The <font color="orange">Champion</font> of <a href="https://sites.google.com/view/fb-ssl-challenge-iccv19/home">Facebook AI Self-Supervision Challenge</a> (all tracks), in ICCV <a href="https://sites.google.com/view/extremevision/">Extreme Vision Workshop</a>, 2019</em><br />
                         <br>
-                        <a href="pdf/paper-codc-2019.pdf">[PDF]</a>
-                        <a href='pdf/talk-iccv19w-2019.pdf'>[Slides]</a>
                     </div>
                     <div class="spanner"></div>
-                </div> -->
+                </div>
 
                 <div class="paper" id="ICCV2019"><img class="paper" src="images/iccv19-sw.png" title="iccv19-sw" />
                     <div> <strong>Switchable Whitening for Deep Representation Learning</strong><br />
