--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy
                         <br>
-                        <em>AAAI Conference on Artificial Intelligence (AAAI), 2018 (<strong>Spotlight</strong>)</em><br />
+                        <em>AAAI Conference on Artificial Intelligence (AAAI), 2018 (<font color="orange"><strong>Spotlight</strong></font>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1712.00661'>[arXiv]</a>
