--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <div class="paper" id="CVPR20"><img class="paper" src="images/cvpr20-clustering.png" title="cvpr20-clustering" />
                     <div> <strong>Learning to Cluster Faces via Confidence and Connectivity Estimation</strong><br />
                         <br>
-                        Lei Yang, <strong>Xiaohang Zhan*</strong>, Dapeng Chen*, Rui Zhao, Chen Change Loy, Dahua Lin
+                        Lei Yang, Dapeng Chen, <strong>Xiaohang Zhan</strong>, Rui Zhao, Chen Change Loy, Dahua Lin
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
                         <br>
