--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
+                        <a href='projects/deocclusion.html'>[Project Page]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
