--- a/projects/deocclusion.html
+++ b/projects/deocclusion.html
@@ -61,8 +61,8 @@
 <div class="section demo">
 		
 		<br>
-		<center><iframe width="840" height="480"
-			src="https://www.youtube.com/watch?v=xIHCyyaB5gU">
+		<center><iframe width="840" height="560"
+			src="https://www.youtube.com/embed/xIHCyyaB5gU?cc_load_policy=1">
 			</iframe></center>
 		<br>
 	</div>
