--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div style="padding-left: 12em; vertical-align: top; height: 120px;"><span style="line-height: 150%; font-size: 20pt;">Xiaohang Zhan (詹晓航)</span><br />
                 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-2136-7592" href="https://orcid.org/0000-0003-2136-7592" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0003-2136-7592</a></div>
                 <span><strong>Ph.D. student</strong></span><br />
-                <span><a href='http://mmlab.site/'>Multimedia Laboratory (MMLab)</a></span><br />
+                <span><a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a></span><br />
                 <span>Department of Information Engineering, The Chinese University of Hong Kong</span><br />
                 <span><a href="mailto:zx017@ie.cuhk.edu.hk">email</a></span><br />
             </div>
@@ -200,7 +200,7 @@
         <div class="section">
             <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
             <div class="paper">
-                I'm currently a Ph.D. student in <a href='http://mmlab.site/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
+                I'm currently a Ph.D. student in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.dae.tsinghua.edu.cn/'>Department of Automative Engineering</a> in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
                 My research interests include machine learning and computer vision.
