--- a/projects/deocclusion.html
+++ b/projects/deocclusion.html
@@ -65,6 +65,9 @@
 			src="https://www.youtube.com/embed/xIHCyyaB5gU?cc_load_policy=1">
 			</iframe></center>
 		<br>
+		<center>
+		<a href="https://www.bilibili.com/video/BV1JT4y157Wt">Watch in bilibili</a>
+		</center>
 	</div>
 
 
