--- a/projects/deocclusion/index.html
+++ b/projects/deocclusion/index.html
@@ -66,7 +66,7 @@
 			</iframe></center>
 		<br>
 		<center>
-		<a href="https://www.bilibili.com/video/BV1JT4y157Wt">Watch in bilibili</a>
+		<a href="https://www.bilibili.com/video/BV1JT4y157Wt">Alternatively watch in bilibili</a>
 		</center>
 	</div>
 
