--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
+                        <a href='https://arxiv.org/abs/2004.02788'>[arXiv]</a>
                         <a href='projects/deocclusion/'>[Project Page]</a>
                         <a href="https://github.com/XiaohangZhan/deocclusion">[Code]</a>
                     </div>
