--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 I'm currently a Ph.D. student in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.dae.tsinghua.edu.cn/'>Department of Automative Engineering</a> in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
-                My research interests include machine learning and computer vision.
+                My research interests include computer vision and machine learning, particularly unsupervised learning.
             </div>
         </div>
     </div>
@@ -214,16 +214,16 @@
             <div class="edu" id="cuhk"><img class="icon" src="icons/cuhk_icon.png" title="cuhk" />
                 <div> <font size="20"><strong>The Chinese University of Hong Kong</strong></font><br />
                     <br>
-                    <font color="gray">August 2017 - Current. Ph.D. in Information Engineering.</font>
+                    <font color="gray">August 2017 - August 2020. Ph.D. in Information Engineering.</font>
                 </div>
                 <div class="spanner"></div>
             </div>
             <div class="edu" id="thu"><img class="icon" src="icons/tsinghua_icon.png" title="thu" />
                 <div> <font size="20"><strong>Tsinghua University</strong></font><br />
                     <br>
-                    <font color="gray">August 2012 - July 2016. Bachelor of Engineering.</font>
+                    <font color="gray">August 2012 - July 2016. Bachelor.</font>
                     <br>
-                    <font color="gray">With "Outstanding Graduate Award" (63 out of about 3500 graduates)</font>
+                    <font color="gray">Rank 3/86. With "Outstanding Graduate Award" (63 out of about 3500 graduates).</font>
                 </div>
                 <div class="spanner"></div>
             </div>
@@ -265,6 +265,7 @@
                         <a href='https://arxiv.org/abs/2004.02788'>[arXiv]</a>
                         <a href='projects/deocclusion/'>[Project Page]</a>
                         <a href="https://github.com/XiaohangZhan/deocclusion">[Code]</a>
+                        <a href='https://www.youtube.com/watch?v=xIHCyyaB5gU'>[Demo]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -287,6 +288,7 @@
                         <br>
                         <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
                         <br>
+                        <a href='https://arxiv.org/abs/2004.00445'>[arXiv]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -300,6 +302,8 @@
                         <br>
                         <a href='https://arxiv.org/abs/1909.03403'>[arXiv]</a>
                         <a href='https://liuziwei7.github.io/projects/CompoundDomain.html'>[Project Page]</a>
+                        <a href='https://www.youtube.com/watch?v=YcmgCCRA1qc'>[Demo]</a>
+                        <a href='https://github.com/zhmiao/OpenCompoundDomainAdaptation-OCDA'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -372,6 +376,7 @@
                         <a href='https://arxiv.org/abs/1903.11412'>[arXiv]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CMP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/conditional-motion-propagation/'>[Code]</a>
+                        <a href='https://www.youtube.com/watch?v=6R_oJCq5qMw'>[Demo]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
