--- a/index.html
+++ b/index.html
@@ -255,6 +255,20 @@
 
             <div> <strong>2020</strong><br />
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/dgp.png" title="dgp" />
+                    <div> <strong>Exploiting Deep Generative Prior for Versatile Image Restoration and Manipulation</strong><br />
+                        <br>
+                        Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
+                        <br>
+                        arXiv preprint
+                        <br>
+                        <a href='https://arxiv.org/abs/2003.13659'>[arXiv]</a>
+                        <a href='https://xingangpan.github.io/projects/DGP.html'>[Project Page]</a>
+                        <a href="https://github.com/XingangPan/deep-generative-prior">[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="CVPR20"><img class="paper" src="images/cvpr20-deocc.png" title="cvpr20-deocc" />
                     <div> <strong>Self-Supervised Scene De-occlusion</strong><br />
                         <br>
